fix: changed border from cellspacing to css border

--- a/styles/Stats.module.css
+++ b/styles/Stats.module.css
@@ -12,6 +12,10 @@
   background-color: #333333;
 }
 
+.cell {
+  border: 1px solid #222222;
+}
+
 .text {
   color: white;
 }
